fix: z-index

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -82,6 +82,7 @@
 			height: 20px;
 			width: 30px;
 			position: relative;
+			z-index: 100;
 			
 			
 			span{
@@ -139,10 +140,11 @@
 		height: 100%;
 		position: fixed;
 		left: 0;
-		background-color: #00000070;
+		background-color: #00000080;
 		overflow: auto;
 		padding-bottom: 30px;
 		transition: $defaultTrans;
+		z-index: 100;
 		&._active{
 			opacity: 1;
 			top: 0;
